# PicoAPG

./: .gitignore  CMakeLists.txt  main.c
apg/: apg.c  apg.h  apg.pio  apg_data.c  apg_internal.h
common/: main_core1.c  main_core1.h  output.c  output.h  trigger.c  trigger.h
lib/libscpi/: CMakeLists.txt
lib/mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
pwm/: pwm.c  pwm.h  pwm_config.c  pwm_config.h  pwm_core1.c  pwm_core1.h  pwm_gpio.c  pwm_gpio.h  pwm_irq.c  pwm_irq.h
scpi_server/: SCPI_COMMANDS.md  scpi-def.c  scpi-def.h  scpi_commands.c  scpi_commands.yaml  scpi_commands_gen.c  scpi_commands_gen.h  scpi_server.c  scpi_server.h
tools/: generate_scpi_artifacts.py
usb_network/: tusb_config.h  usb_descriptors.c  usb_network.c  usb_network.h
usb_network/netif/: ethernet.h
usb_network/temp/: tusb_config.h  usb_descriptors.c  usb_network.c
